force-app/main/default/objects/agrid__Action__c/agrid__Action__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>