force-app/main/default/objects/agrid__Action__c/fields/agrid__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>agrid__Action_Type__c</fullName>
    <label>Action_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>