force-app/main/default/objects/agrid__Action__c/fields/agrid__Column__c.field-meta.xml
<CustomField>
    <fullName>agrid__Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Column</label>
    <referenceTo>agrid__Column__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>