force-app/main/default/objects/agrid__Action__c/fields/agrid__Configuration__c.field-meta.xml
<CustomField>
    <fullName>agrid__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>agrid__Configuration__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>