force-app/main/default/objects/agrid__Action__c/fields/agrid__Target__c.field-meta.xml
<CustomField>
    <fullName>agrid__Target__c</fullName>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>